# httpie-oapi

./: Cargo.toml  README.md
src/: cli.rs  command_tokens.rs  config.rs  fish.rs  handlers.rs  main.rs  tokens.rs
src/command/: api_spec.rs  complete.rs  mod.rs  param.rs  path.rs  path_var.rs
src/command/completion/: fish.rs  mod.rs
src/openapi/: api_spec.rs  endpoint.rs  method.rs  mod.rs  param.rs  reference.rs
