[package]
name = "httpie-oapi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38", features = [
	"suggestions",
	"color",
	"wrap_help",
	"cargo",
	"derive",
] }
openapiv3 = "2.0.0"
serde = "1.0.219"
serde_json = "1.0.140"
shell-words = "1.1.0"
dirs = "6.0"
url = "2.5"
reqwest = { version = "0.12", features = ["blocking"] }
toml = "0.8.22"
anyhow = "1.0.98"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
